# eot-tester

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_livekit_integration.py  test_pipecat.py
dataset/: finished.txt  unfinished.txt  wait.txt
eot_tester/: __init__.py  base.py  cli.py
eot_tester/algorithms/: __init__.py  livekit.py  pipecat.py  ten.py
tests/: __init__.py  test_base.py  test_cli.py  test_ten.py
