[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eot-tester"
version = "0.1.0"
description = "A command line tool to test different end-of-turn (EOT) algorithms"
authors = [{name = "EOT Tester", email = "test@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "rich>=13.0.0",
    "onnxruntime>=1.15.0",
    "huggingface_hub>=0.16.0",
    "openai>=1.0.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "torchaudio>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
eot-test = "eot_tester.cli:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true